# DS4toPS2

./: .gitignore  CMakeLists.txt  README.md  memmap.ld
src/: controller_simulator.cpp  controller_simulator.h  main.cpp
src/ds4/: ds4.cpp  ds4.h  ds4InputState.cpp  ds4InputState.h  ds4OutputState.cpp  ds4OutputState.h
